--- a/style.css
+++ b/style.css
@@ -95,8 +95,7 @@ footer {
 }
 
 main {
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form {
@@ -165,7 +164,12 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
-
+.principal{
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
 .principal p {
 	margin: 0 0 1em;
 }
@@ -184,20 +188,49 @@ td, th {
 	margin: 0 20px 20px 0;
 }
 
-.imagembeneficios {
-	width: 60%;
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+ 
+.lista-beneficios{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
 }
 
+.imagem-beneficios {
+	width: 60%;
+}
+.beneficios{
+	padding: 3em 0;
+	background: #888888;
+	
+}
 .mapa {
 	padding: 3em 0;
+	background-image: linear-gradient(#FEFEFE, #888888);
+}
+
+.exibicao-mapa{
+	width: 960px;
+	margin: 0 auto;
 }
 
 .mapa p {
 	margin: 0 0 2em;
 	text-align: center;
 }
+/* ########### muito importante ########### */
+.itens:first-child{
+	font-weight: bold;
+}
+/* *chamados de pseudo-elementos:
+-first e last-child tbm existem
+-quando não for primeiro ou último -> ".itens:nth-child(radical)"
+-posso usar o atributo par radical 2n */
 
 .video {
-	width: 560px;
-	margin: 1em auto;
+	width: 960px;
+	margin: 2em auto;
 }
