--- a/style.css
+++ b/style.css
@@ -164,12 +164,14 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
-.principal{
+
+.principal {
 	padding: 3em 0;
 	background: #FEFEFE;
 	width: 940px;
 	margin: 0 auto;
 }
+
 .principal p {
 	margin: 0 0 1em;
 }
@@ -188,32 +190,13 @@ td, th {
 	margin: 0 20px 20px 0;
 }
 
-.conteudo-beneficios{
-	width: 640px;
-	margin: 0 auto;
-}
- 
-.lista-beneficios{
-	width: 40%;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.imagem-beneficios {
-	width: 60%;
-}
-.beneficios{
-	padding: 3em 0;
-	background: #888888;
-	
-}
 .mapa {
 	padding: 3em 0;
-	background-image: linear-gradient(#FEFEFE, #888888);
+	background: linear-gradient(#FEFEFE, #888888);
 }
 
-.exibicao-mapa{
-	width: 960px;
+.mapa-conteudo {
+	width: 940px;
 	margin: 0 auto;
 }
 
@@ -221,16 +204,65 @@ td, th {
 	margin: 0 0 2em;
 	text-align: center;
 }
-/* ########### muito importante ########### */
-.itens:first-child{
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
 	font-weight: bold;
 }
-/* *chamados de pseudo-elementos:
--first e last-child tbm existem
--quando não for primeiro ou último -> ".itens:nth-child(radical)"
--posso usar o atributo par radical 2n */
+
+.itens:before {
+	content: "🟊";
+}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
+}
 
 .video {
-	width: 960px;
+	width: 560px;
 	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}
+
+	.lista-beneficios, .imagem-beneficios {
+		width: 100%;
+	}
 }
